Fix #105150: Mesh.vertex_colors.new() returns existing active layer

In 6514bb05ea5a138d8971 I misinterpreted the function's intended
behavior when there was already an existing active layer. The data from
the active layer is just meat to be copied, the function should always
add a new attribute.